--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "mammal-up": "./index.js"
   },
   "scripts": {
+    "up": "./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
