--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "up": "./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all",
+    "arrowParens": "avoid"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
